welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:4: error: type mismatch;
 found   : Unit
 required: Boolean
while((!estFaceMur()) && (a=false)){
                           ^